--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -23,6 +23,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100px;
+    box-sizing: border-box;
     border-radius: 30px;
     vertical-align: middle;
     margin-bottom: 10px;
@@ -126,6 +127,7 @@
     font-weight: 600;
     text-transform: uppercase;
     width: 50%;
+    box-sizing: border-box;
 }
 
 .creating-options {
@@ -154,6 +156,7 @@
     flex-direction: column;
     gap: 30px;
     width: 50%;
+    box-sizing: border-box;
     font-weight: 600;
     line-height: 100%;
     text-transform: uppercase;
@@ -202,17 +205,21 @@
     float: right;
     text-align: right;
     width: 50%;
+    box-sizing: border-box;
 }
+
 .base .about-base {
     width: 100%;
     display: inline-flex;
     margin-top: 30px;
     justify-content: space-between;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
 
 .about-base div {
     width: 45%;
+    box-sizing: border-box;
 }
 
 .about-base .base-img {
@@ -263,6 +270,7 @@
 .numbers {
     display: inline-flex;
     width: 60%;
+    box-sizing: border-box;
     justify-content: space-between;
 }
 
@@ -280,6 +288,7 @@
     width: 35%;
     font-size: 14px;
     font-weight: 500;
+    box-sizing: border-box;
 }
 
 .projects {
@@ -295,6 +304,7 @@
     text-align: center;
     line-height: 100%;
     width: 50%;
+    box-sizing: border-box;
     margin: 10px auto;
 }
 
@@ -376,7 +386,262 @@
     margin: 25px auto;
 }
 
-@media (max-width:700px) {
+.reviews {
+    padding: 15px 20px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.reviews h1 {
+    font-size: 3.4em;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: 56%;
+}
+
+.reviews .review-box {
+    width: 60%;
+    text-align: center;
+    margin: 20px auto;
+}
+
+.review-box h2 {
+    font-size: 2em;
+}
+
+.review-box h3 {
+    font-size: 17px;
+    line-height: 100%;
+    margin: 40px 0 5px 0;
+    font-weight: 500;
+}
+
+.review-box p {
+    font-size: 13px;
+    color: #a8a8a8;
+}
+
+.review-nav {
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+    margin-bottom: 30px;
+}
+
+.review-nav button {
+    padding: 5px;
+    border-radius: 10px;
+    border: none;
+    margin-left: 10px;
+    transition: .3s ease-in-out;
+    &:hover {
+        background-color: #75f16b;
+        padding: 12px 5px;
+    }
+}
+
+.sponsors li {
+    margin: 0 10px;
+    display: inline-flex;
+  }
+  
+  .sponsors-container {
+    overflow: hidden;
+    background-color: #333;
+    overflow-x: scroll;
+    padding: 15px 0;
+    scrollbar-width: none;
+    white-space: nowrap;
+    width: 100vw;
+    box-sizing: border-box;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+  }
+  
+  .sponsors-container .sponsors {
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    animation: scroll 25s linear infinite;
+    /* Make sure to use a longer duration for smoother scrolling */
+  }
+  
+  @keyframes scroll {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .sponsors img {
+    width: 120px;
+    height: auto;
+  }
+
+
+.cook {
+    padding: 70px 20px;
+    background-color: #75f16b;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.cook h1 {
+    font-size: 3.2em;
+    font-weight: 700;
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+    text-transform: uppercase;
+    line-height: 100%;
+}
+
+.cook p {
+    font-size: 14px;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.cook button {
+    width: fit-content;
+    margin: 0 auto;
+    border-radius: 25px;
+    padding: 15px 30px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #000;
+    font-family: "Montserrat", sans-serif;
+    border: 2px solid #75f16b;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+    &:hover {
+        background-color: transparent;
+        border: 2px solid #000;
+        color: #000;
+    }
+}
+
+footer {
+    padding: 15px 30px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+footer .head {
+    display: inline-flex;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 30px 0;
+    justify-content: space-between;
+    border-bottom: 1px solid #a8a8a8;
+}
+
+.head .first {
+    width: 20%;
+    box-sizing: border-box;
+}
+
+.head h1 {
+    font-size: 20px;
+    line-height: 100%;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+}
+
+.head h1 button {
+    height: 25px;
+    align-self: baseline;
+    border-radius: 20px;
+    width: 13px;
+    border: none;
+    background-color: #75f16b;
+    &.logo {
+        height: 11px;
+        width: fit-content;
+        background-color: #fff;
+        margin-right: 10px;
+    }
+}
+
+.head .socials {
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+    gap: 20px;
+}
+
+.socials li {
+    display: inline-flex;
+    align-items: center;
+    font-size: 16px;
+    padding: 7px;
+    border-radius: 50px;
+    transition: .3s ease-in-out;
+    &:hover {
+        background-color: #75f16b;
+        color: #000;
+    }
+}
+
+.head .second {
+    box-sizing: border-box;
+    display: inline-flex;
+    gap: 70px;
+    width: 75%;
+    justify-content: flex-end;
+}
+
+.second ul {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    gap: 20px;
+}
+
+.second ul li {
+    font-size: 14px;
+    cursor: pointer;
+    color: #a8a8a8;
+    transition: .3s ease-in-out;
+    &:hover {
+        color: #75f16b;
+    }
+}
+
+.second .bold {
+    font-weight: 700;
+    color: #fff;
+    font-size: 16px;
+    &:hover {
+        color: inherit;
+    }
+}
+
+footer .tail {
+    text-align: center;
+    padding: 20px 0 0 0;
+    font-size: 12px;
+    color: #a8a8a8;
+}
+
+@media (max-width:750px) {
     .header-info {
         flex-direction: column;
         gap: 10px;
@@ -449,5 +714,46 @@
     }
     .projects-box .project-card {
         width: 100%;
+    }
+    .reviews h1 {
+        width: 100%;
+        font-size: 3em;
+    }
+    .reviews .review-box {
+        width: 100%;
+    }
+    .review-box h2 {
+        font-size: 1.5em;
+    }
+    .sponsors-container {
+        padding: 0 10px;
+        overflow-x: hidden;
+    }
+    .sponsors-container .sponsors{
+        animation: scroll 15s linear infinite;
+        padding: 20px 0;
+    }
+    .cook h1, .cook p {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    footer .head {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .head .first, .head .second {
+        width: 100%;
+        justify-content: space-between;
+        box-sizing: border-box;
+    }
+    .head .second{
+        gap: 0;
+        flex-wrap: wrap;
+    }
+    .head .second ul {
+        margin-bottom: 10px;
+        width: 50%;
+        gap: 10px;
+        box-sizing: border-box;
     }
 }
