--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -89,7 +89,7 @@ nav .contact:hover {
 
 /* menu Styles */
 .menu {
-  background-color: #f2f2f2;
+  background-color: #fff;
   padding: 10px;
   box-sizing: border-box;
   position: fixed;
@@ -97,15 +97,15 @@ nav .contact:hover {
   right: 0;
   top: 0;
   z-index: 1000;
-  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
   overflow-y: auto;
-  transition: transform 0.3s ease-in-out;
-  transform: translateX(100%);
+  transition:  .4s ease-in-out;
+  max-height: 0;
+  padding: 0;
 }
 
 /* Show menu: When menu is open, set translate to 0 */
 .menu.show {
-  transform: translateX(0);
+  max-height: 60vh;
 }
 
 .overlay {
@@ -128,7 +128,7 @@ nav .contact:hover {
   font-family: "Montserrat", sans-serif;
   display: flex;
   flex-direction: column;
-  margin: 10px 0;
+  margin: 10px 10px;
   gap: 13px;
 }
 
@@ -147,9 +147,11 @@ nav .contact:hover {
 }
 
 .menu .toggle-menu {
+  padding: 10px 10px 0 0;
   width: 100%;
   display: block;
   text-align: right;
+  box-sizing: border-box;
   color: #000;
 }
 
