--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -171,6 +171,9 @@
     gap: 10px;
     align-items: center;
     cursor: pointer;
+    &.active, &:hover {
+        color: #75f16b;
+    }
 }
 
 .hot {
@@ -183,11 +186,8 @@
     color: #75f16b;
 }
 
-.creating-options ul li:hover {
-    color: #75f16b;
-}
 
-.creating-options ul li:hover .hot {
+.creating-options ul li:hover .hot, .creating-options ul li.active .hot {
     opacity: 1;
     font-size: 24px;
 }
