--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -141,7 +141,7 @@ nav .contact:hover {
   font-weight: 500;
   padding-left: 10px;
   transition: .4s ease-in-out;
-  &:hover {
+  &:hover, &.active {
     border: 2px solid #000;
   }
   &:nth-last-child(1) {
